<resources>

    <string name="app_name">Reservas</string>
    <string name="action_settings">Settings</string>

    <!-- text view -->

    <string name="text_view_reserva">Reserva</string>
    <string name="text_view_nombre">Nombre</string>
    <string name="text_view_date_begin">Fecha Inicio</string>
    <string name="text_view_date_end">Fecha Fin</string>
    <string name="text_view_header">Insertar</string>
    <string name="text_view_id_reserva">Reserva</string>
    <string name="text_view_fecha_inicio">F. Inicio</string>
    <string name="text_view_fecha_fin">F. Fin</string>
    <string name="text_view_hora">Hora</string>
    <string name="text_view_lugar">Lugar</string>
    <string name="text_view_estado">Estado</string>

    <!-- botones -->
    <string name="button_insert">Insertar</string>
    <string name="button_clean">Limpiar</string>
    <string name="button_save">Guardar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_accept">Aceptar</string>
    <string name="button_ok">Ok</string>
    <string name="button_close">Cerrar</string>
    <string name="question_cancel">¿Desea Cancelar?</string>
    <string name="delete">Eliminar</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <!-- mensajes -->
    <string name="alert_message">Alerta</string>
    <string name="app_error_message">Se ha producido una excepción</string>
    <string name="app_insert_message">El registro se ha insertado correctamente</string>
    <string name="app_update_message">El registro se ha actualizado correctamente</string>
    <string name="info_message">Información</string>

    <string name="title_activity_login">Reservas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
